[Matthew]Title Change 01
Changed the title from Uitiam.git.io >> Current title.
Added ID tags to h1 + h1 of the title.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Uitiam.GitHub.io</h1>
+      <h1 id="project_title" class="title">Welcome to the Uitiam's homepage!</h1>
+      <h2 id="project_title" class="title">Feel free to give us 100% on this lab!</h2>
     </header>
     <div id="container">
       <p class="tagline"></p>
